--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600;700&family=Mitr:wght@300;400;500;600&family=Sarabun:wght@300;400;500;600;700&family=Chakra+Petch:wght@300;400;500;600;700&family=Pridi:wght@300;400;500;600;700&family=Sriracha&family=Pattaya&family=Srisakdi:wght@400;700&family=Birthstone&family=Style+Script&family=Shadows+Into+Light+Two&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
